app/design/frontend/IdeaInYou/skinsider/Amasty_Xsearch/web/css/source/_extend.less
& when (@media-common = true) {
    .amsearch-search-page.page-products .columns {
        .toolbar.toolbar-products:last-of-type {
            display: none;
        }

        .products-grid .product-item {
            padding: 0 7.5px;
            box-shadow: none;
            margin-right: 0;

            .product-item-photo {
                img {
                    max-width: 100%;
                }
            }

            &:hover {
                .product-item-photo {
                    .img-2 {
                        left: 0;
                    }

                    .button-container,
                    .button-container-unavailable {
                        button {
                            .lib-font-size(13px);
                        }
                    }
                }
            }
        }
    }

    .amsearch-product-list, .amsearch-tab-items {
        .lib-vendor-prefix-display();
        .lib-vendor-prefix-flex-direction(column);
    }

    .amsearch-collapsible-title {
        &:after {
            display: none !important;
        }
    }

    .amsearch-form-block {
        width: 100% !important;

        .amsearch-result-section {
            display: none;
        }

        &.-opened {
            .amsearch-result-section {
                display: block;
            }
        }
    }

    .amsearch-result-section {
        display: unset;
        max-height: 500px;

        .amsearch-link.-view-all {
            display: none;
        }

        .bottom-view-all {
            width: 100%;

            .amsearch-title {
                display: none;
            }

            .amsearch-link.-view-all {
                .lib-vendor-prefix-display();
                .lib-vendor-box-align();
                justify-content: center;
                .lib-font-size(16px);
                font-family: @libre-font-family;
                .lib-css(color, @color-search-view-all) !important;
                text-transform: unset;
                padding: 3px 10px 4px;
                margin: 4px 0 0;

                .amsearch-count {
                    &:after,
                    &:before {
                        display: none;
                    }

                    padding: 0 7px;
                }

                span {
                    .lib-css(color, @color-search-view-all);
                    .lib-font-size(16px);
                    border: none;
                    font-family: @libre-font-family;
                    text-transform: unset;
                    width: unset;
                }

                .text {
                    .lib-icon-font(
                        @_icon-font: @icomoon-font-family,
                        @_icon-font-content: @_icon-arrow-right,
                        @_icon-font-color: @color-search-view-all,
                        @_icon-font-position: after,
                        @_icon-font-margin: 0 0 0 7px,
                        @_icon-font-size: 14px
                    );
                }

                &:hover {
                    border-radius: 8px;
                    .lib-css(background, @color-background-search-hover);
                    text-decoration: none;
                }
            }
        }

        .amsearch-block-header {
            .lib-css(color, @color-gray-middle2);
            font-family: 'Libre Baskerville', serif;
            padding-bottom: 0 !important;
            margin-bottom: 6px !important;

            span {
                width: 100%;
                line-height: 16px;
                .lib-font-size(13px);
                border-bottom: 1px solid @color-gray-darken0;
                padding-bottom: 3px;
                letter-spacing: 1px;
                text-transform: uppercase;
                .lib-css(color, @color-gray60);
                font-family: @lato-font-family;
            }
        }

        .amsearch-link, .amsearch-highlight {
            .lib-css(color, @theme__color__primary-alt);
            font-family: 'Libre Baskerville', serif;
        }

        .amsearch-items-section {
            max-width: unset !important;
            padding: 10px 0 0 0;

            .amsearch-item-container {
                padding: 0;

                .amsearch-description {
                    display: none;
                }

                &.-page {
                    display: none;
                }

                .amsearch-tab-items {
                    padding: 0 10px;

                    .amsearch-item {
                        margin: 0;
                        background: unset;
                        border-radius: unset;

                        .amsearch-link {
                            padding: 8px 10px 8px;
                            text-transform: unset;
                            .lib-css(color, @color-gray20);
                            .lib-font-size(15px);
                            .lib-line-height(16px);

                            &:hover {
                                .lib-css(background, @color-background-search-hover);
                                border-radius: 8px;
                            }
                        }
                    }
                }
            }
        }

        .amsearch-products-section {
            padding: 10px;
            border: none;

            .amsearch-product-list {
                width: 100%;

            }

            .amsearch-block-header {
                .lib-vendor-prefix-flex-direction(column);
                line-height: 16px;
                padding: 0 10px;

                .amsearch-title {
                    .amsearch-count {
                        display: none;
                    }
                }

                .amsearch-link {
                    .amsearch-count {
                        border: none;
                    }
                }
            }

            .amsearch-item.product-item {
                cursor: pointer;
                max-width: 100% !important;
                padding: 10px;
                border-bottom: 1px solid @color-gray-darken0;
                box-shadow: none;
                min-height: unset;
                .lib-vendor-prefix-flex-direction(row) !important;
                .lib-vendor-prefix-flex-wrap(unset);

                &:hover {
                    .lib-css(background, @color-background-search-hover);
                    border-radius: 8px;
                }

                .product-image-container {
                    max-width: 70px;
                }

                .amsearch-image {
                    width: 70px;
                    height: 70px;
                    padding: 0;

                    .product-image-container, .product-image-photo {
                        max-width: 70px;
                        max-height: 70px;
                    }
                }

                .amsearch-description {
                    max-height: 70px;
                    min-height: 70px;
                    padding: 0;
                    margin-left: 10px;
                    text-align: left;

                    .product-item-link {
                        .lib-css(color, @color-gray20);

                        &:hover {
                            text-decoration: none;
                        }
                    }

                    .amsearch-wrapper-inner {
                        .old-price {
                            flex-basis: unset;
                            padding: 0;
                            margin: 0;
                        }
                    }

                    .product-item-link, .product-reviews-summary {
                        .lib-font-size(15px);
                        padding: 0;
                        text-transform: unset;
                        justify-content: left;
                        margin-bottom: 2px;

                        .rating-result {
                            &:before {
                                .lib-css(color, @color-search-star);
                                .lib-line-height(16px);
                                height: unset;
                            }
                        }
                    }

                    .price-box {
                        .lib-vendor-prefix-flex-direction(row);
                        .lib-vendor-prefix-flex-wrap(nowrap);
                        padding: 0;

                        .price-container {
                            .lib-line-height(15px);
                            .lib-font-size(15px);
                            padding: 0;
                        }
                    }
                }
            }
        }
    }
}

.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
    .catalogsearch-result-index.page-layout-2columns-left {
        .column.main {
            width: 73.333333%;
            padding: 0 0 0 2%;
        }

        .sidebar-main {
            width: 24%;
        }

        .search.results {
            .block:first-of-type {
                display: none;
            }
        }
    }
    .amsearch-result-section {
        .amsearch-items-section {
            .lib-vendor-prefix-display();

            div {
                width: 100%;
            }

            .amsearch-block-header {
                padding: 0 10px 2px;
            }

            .amsearch-item-container {
                .amsearch-tab-items {
                    .amsearch-item {
                        .amsearch-link {
                            padding: 8px 0 8px;
                        }
                    }
                }
            }
        }
    }
}

.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
    .amsearch-result-section {
        max-height: unset;
    }
    .amsearch-search-page.page-products .columns {
        .products-grid .product-item {
            .product-item-photo {
                max-width: 225px;
                max-height: 225px;
                margin: 0 auto;
            }
        }
    }
}

.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__xl) {
    .amsearch-search-page.page-products .columns {
        .products-grid .product-item {
            .product-item-photo {
                max-height: 199px;
            }
        }
    }
}

